[gd_scene load_steps=2 format=3 uid="uid://c3rrt80jc2vwl"]

[ext_resource type="Script" uid="uid://cx7a4w6hkl7kr" path="res://scripts/intermission.gd" id="1_f60dt"]

[node name="Intermission" type="Node2D"]
script = ExtResource("1_f60dt")

[node name="DisplayTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 436.0
offset_top = 234.0
offset_right = 704.0
offset_bottom = 409.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NextLevelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Next Level"

[connection signal="timeout" from="DisplayTimer" to="." method="_on_display_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/NextLevelButton" to="." method="_on_button_pressed"]
